# codefather-test-task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 253b3203aa59_add_created_at_and_deleted_at_to_posts.py  7f9d2b4c1a8e_fix_notifications_defaults_and_nullability.py  91efa522cfbe_first_init.py  941d9367c604_add_notification_model.py
app/: main.py
app/api/: depends.py
app/api/schemas/: auth_schema.py  notifications_schema.py  posts_schema.py
app/api/v1/: auth.py  notifications.py  posts.py
app/core/: config.py  security.py
app/database/: engine.py  session.py
app/models/: like.py  notification.py  post.py  user.py
app/repositories/: like.py  notification.py  post.py  user.py
app/services/: auth_service.py  likes_service.py  notifications_service.py  post_service.py
app/tasks/: broker.py  notifications.py
app/uow/: uow.py
scripts/: start_worker.sh
tests/: conftest.py  test_auth.py  test_notifications.py  test_posts_and_likes.py
