[project]
name = "test-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Squilix",email = "Squilix@example.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "alembic (>=1.18.4,<2.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "fastapi[all] (>=0.135.2,<0.136.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "taskiq-aio-pika (>=0.6.0,<0.7.0)",
    "taskiq-fastapi (>=0.4.0,<0.5.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=1.1.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
